--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ backcall==0.2.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.12.5
+chardet==4.0.0
 colorama==0.4.4
 decorator==5.0.7
 Django==3.2
+idna==2.10
 ipykernel==5.5.3
 ipython==7.22.0
 ipython-genutils==0.2.0
@@ -20,10 +22,12 @@ python-dateutil==2.8.1
 pytz==2021.1
 pywin32==300
 pyzmq==22.0.3
+requests==2.25.1
 six==1.15.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 tornado==6.1
 traitlets==5.0.5
+urllib3==1.26.4
 wcwidth==0.2.5
 wincertstore==0.2
