--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ certifi==2020.12.5
 chardet==4.0.0
 colorama==0.4.4
 decorator==5.0.7
+dj-database-url==0.5.0
 Django==3.2
+django-heroku==0.3.1
+gunicorn==20.1.0
 idna==2.10
 ipykernel==5.5.3
 ipython==7.22.0
@@ -17,6 +20,7 @@ jupyter-core==4.7.1
 parso==0.8.2
 pickleshare==0.7.5
 prompt-toolkit==3.0.18
+psycopg2==2.8.6
 Pygments==2.8.1
 python-dateutil==2.8.1
 pytz==2021.1
@@ -30,4 +34,5 @@ tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.4
 wcwidth==0.2.5
+whitenoise==5.2.0
 wincertstore==0.2
