--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,16 @@
-asgiref==3.3.4
-backcall==0.2.0
-beautifulsoup4==4.9.3
+asgiref==3.5.1
+beautifulsoup4==4.11.1
 bs4==0.0.1
-certifi==2020.12.5
-chardet==4.0.0
-colorama==0.4.4
-decorator==5.0.7
+certifi==2020.6.20
+charset-normalizer==2.0.12
 dj-database-url==0.5.0
-Django==3.2
-django-heroku==0.3.1
+Django==4.0.4
+django-on-heroku==1.1.2
 gunicorn==20.1.0
-idna==2.10
-ipykernel==5.5.3
-ipython==7.22.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-parso==0.8.2
-pickleshare==0.7.5
-prompt-toolkit==3.0.18
-psycopg2==2.8.6
-Pygments==2.8.1
-python-dateutil==2.8.1
-pytz==2021.1
-# pywin32==300
-pyzmq==22.0.3
-requests==2.25.1
-six==1.15.0
-soupsieve==2.2.1
-sqlparse==0.4.1
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.4
-wcwidth==0.2.5
-whitenoise==5.2.0
-wincertstore==0.2
+idna==3.3
+psycopg2-binary==2.9.3
+requests==2.27.1
+soupsieve==2.3.2.post1
+sqlparse==0.4.2
+urllib3==1.26.9
+whitenoise==6.0.0
